# GTM_agent_auto_mode_on

./: .env.example  .gitignore  ARCHITECTURE_MERMAID.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  START.md  SYSTEM_COMPONENTS.md  VISION.md  pyproject.toml  restart.sh  run_all.sh  run_roundtable.sh
RALPH/: STATUS.md  TASKS.md  TASKS_BROWSERBASE_TOOL.md  TASKS_BUILDER.md  TASKS_EXECUTOR.md  TASKS_FULLSEND.md  TASKS_ORCHESTRATOR.md  TASKS_REDIS_AGENT.md  TASKS_ROUNDTABLE.md  TASKS_WATCHER.md  ralph.sh
RALPH/archive/resend-webhook-2025-01-30/: STATUS.md  TASK.md  TASKS.md
context/: product_context.md
context/templates/: learnings.md  product_context.md  worklist.md
demo/dashboard/: agent_dashboard.html  dashboard_api.py  demo_viz.html  realtime_dashboard.html
docs/: discord.md  local-redis.md  redis-mcp-cursor.md
docs/prd/: PRD_BUILDER.md  PRD_EXECUTOR.md  PRD_FULLSEND.md  PRD_ORCHESTRATOR.md  PRD_REDIS_AGENT.md  PRD_ROUNDTABLE.md  PRD_WATCHER.md
docs/status/: STATUS_TEMPLATE.md  browserbase_tool.md  builder.md  discord.md  executor.md  fullsend.md  integration_review.md  orchestrator.md  redis_agent.md  redis_setup.md  roundtable.md  watcher.md  weave_setup.md
orchestrator/: .env.example  agent.py  environment.yml  orchestrator.py  redis_tools.py  requirements.txt
scripts/: mcp_stdio_filter.py  test_e2e_wiring.sh
services/: demo_logger.py  tracing.py
services/builder/: __init__.py  __main__.py  listener.py
services/builder/requests/: current_prd.yaml
services/discord/: config.py  main.py  pyproject.toml  test_integration.py  test_roundtrip.py
services/discord/adapters/: discord_adapter.py  web_adapter.py
services/discord/core/: __init__.py  bus.py  messages.py  router.py
services/discord/templates/: dashboard.html
services/executor/: runner.py
services/fullsend/: __init__.py  __main__.py  listener.py  publish_experiment.py  store_learning.py
services/fullsend/experiments/: SUMMARY_exp_20260201_cto_competitor_stars.md  exp_20260201_cto_cold_agentforge.yaml  exp_20260201_cto_cold_agentforge_README.md  exp_20260201_cto_competitor_stars.yaml  exp_20260201_cto_stargazer_email.yaml  exp_20260201_hiring_signal_agentforge.yaml  exp_20260201_hiring_signal_agentforge_README.md  exp_20260201_ops_leader_agentforge.yaml  exp_20260201_ops_leader_agentforge_README.md  exp_20260201_ops_leader_agentforge_v2_autonomous.yaml  exp_20260201_ops_leader_agentforge_v2_autonomous_README.md  list_sourcing_guide.md  publish_experiment.py  run_ops_leader_experiment.py  run_ops_leader_v2_experiment.py  store_learning.py
services/fullsend/experiments/tool_requests/: req_20260201_github_cto_enricher.yaml  req_20260201_linkedin_job_scraper.yaml
services/fullsend/requests/: current.md
services/fullsend/tool_requests/: req_20260201_email_sender.yaml
services/orchestrator/: agent.py  config.py  dispatcher.py
services/orchestrator/prompts/: system.txt
services/redis/: redis_agent.md  redis_agent.py
services/redis_agent/: alerts.py  analyzer.py  config.py  main.py  monitor.py
services/redis_agent/tests/: test_analyzer.py  test_monitor.py
services/roundtable/: AGENTS.md  README.md  __init__.py  __main__.py  llm.py  personas.py  runner.py
services/watcher/: classifier.py  config.py  pyproject.toml  responder.py
tools/: browserbase_email_finder.py  cold_email_sender.py  github_stargazer_scraper.py
