[project]
name = "fullsend-discord"
version = "0.1.0"
description = "Discord Communication Service for Fullsend GTM agent"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.0",
    "fastapi>=0.100.0",
    "redis>=5.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
fullsend-discord = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
